--- a/config.json
+++ b/config.json
@@ -1,15 +1,15 @@
 {
-    "ownerNumber": ["94768535137@s.whatsapp.net"],
-    "ownerName": "DINUWA LK OFFICIAL BOT",
+    "ownerNumber": ["94717554336@s.whatsapp.net"],
+    "ownerName": "ISHIYA OFFICIAL BOT",
     "instagram" : "https://instagram.com/dinuwa_lk._",
-    "botName": "Pizzaa🐧-Mdོ ",
-    "footer": "http://dinuwa-lk.github.io",
+    "botName": "ishiya-Mdོ ",
+    "footer": "http://https://youtube.com/@masterx4493",
     "sessionName": "session",
     "fotoDonasi": "./qris.jpg",
     "pathimg": "./Haruka.jpg",
     "BotKey": "VdFlEL76",
-    "auto_welcomeMsg": false,
-    "auto_leaveMsg": false,    
+    "auto_welcomeMsg": true,
+    "auto_leaveMsg": true,    
     "autobio": true,
     "anticall": true,
     "autorespond": false,
